# RainKaraoke

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: API.md  DATABASE.md  DESIGN.md  DEVELOPMENT_PLAN.md  PROGRESS.md  SCHEDULE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: atmosphere.rs  audio.rs  effect.rs  interlude.rs  library.rs  lyrics.rs  midi.rs  mod.rs  playback.rs  playlist.rs  queue.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: atmosphere.rs  audio_config.rs  effect.rs  interlude.rs  mod.rs  song.rs  tag.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/atmosphere/: audio_player.rs  mod.rs
src-tauri/src/modules/audio_processor/: mod.rs  pitch_shifter.rs
src-tauri/src/modules/audio_router/: live_router.rs  mod.rs  recorder.rs
src-tauri/src/modules/effects/: chain.rs  chorus.rs  compressor.rs  deesser.rs  delay.rs  eq.rs  exciter.rs  gain.rs  gate.rs  level_meter.rs  mod.rs  reverb.rs
src-tauri/src/modules/interlude/: audio_player.rs  mod.rs
src-tauri/src/modules/lyrics_parser/: mod.rs
src-tauri/src/modules/media_engine/: audio_player.rs  mod.rs  playback_state.rs
src-tauri/src/modules/midi_handler/: mod.rs
src-tauri/src/modules/vad/: mod.rs
src-tauri/src/utils/: file_matcher.rs  file_scanner.rs  metadata_extractor.rs  mod.rs
src/hooks/: useKeyboardShortcuts.ts
src/lib/: api.ts
(+24 files in other folders)
